# openhands-openvino-integration

./: .gitattributes  .gitignore  README.md  gsoc_first_contact.md  pyproject.toml  requirements.txt  test_ovms_direct.py
analysis/: gaps_analysis.md  usability_report.md
configs/: env.template  graph.pbtxt  ovms_config.json
docs/: architecture.md  docker_storage_migration.md  docker_storage_ubuntu_reconfig.md  known_limitations.md  observations.md  openai_compatibility_notes.md  openhands_configuration.md  troubleshooting_history.md
docs/gsoc/: gsoc_first_contact.md
scripts/: _config.py  collect_usability_metrics.py  deploy_ovms.sh  run_stream_test.py  start_openhands.sh  test_curl.sh  test_openai_endpoint.py  test_python.py  test_v3_api.py  validate_chat_completion.py
